h1. CHANGELOG

h3. 0.5.0 June 6, 2014

* tests for Devise are now available in the rails_apps_testing gem (removed here)

h3. 0.4.9 June 5, 2014

* minor improvement for Devise 'delete user' test for RSpec 3.0

h3. 0.4.8 June 4, 2014

* skip a slow test when using RSpec with Devise

h3. 0.4.7 June 4, 2014

* "require 'rails_helper'" not needed when it is included in the '.rspec' file

h3. 0.4.6 June 2, 2014

* update for RSpec 3.0

h3. 0.4.5 May 31, 2014

* user pages for OmniAuth

h3. 0.4.4 May 13, 2014

* RSpec tests that use Warden test helpers need a reset action

h3. 0.4.3 May 10, 2014

* use Devise 'lazy way' to add name attribute to permitted parameters

h3. 0.4.2 May 10, 2014

* additional 'devise' tags for RSpec tests

h3. 0.4.1 May 10, 2014

* add 'devise' tag to RSpec tests
* change 'log in' to 'sign in' and 'logout' to 'sign out'

h3. 0.4.0 May 6, 2014

* generate tests when RSpec is installed
* update Users controller to deny access to other users' profiles

h3. 0.3.1 May 2, 2014

* add a generator for an 'About' page

h3. 0.3.0 May 1, 2014

* add Devise registrations controller for 'users' and 'authorized' generators

h3. 0.2.0 May 1, 2014

* fixes for 'authorized' generator

h3. 0.1.0 May 1, 2014

* initial release